# filesync-client

./: CMakeLists.txt  README.md  filesync.cpp  filesync_client.cpp  tcp_client.cpp  tcp_client.h
include/: common.h
