cmake_minimum_required(VERSION 3.0.0)
set(CMAKE_CXX_STANDARD 17)
project(filesync VERSION 0.1.0)
add_executable(filesync filesync.cpp)
target_link_libraries(filesync PRIVATE "ws2_32")
target_link_libraries(filesync PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}\\lib\\libcommon.dll")
file(COPY "lib\\libcommon.dll" DESTINATION .)